# amenities

./: .gitignore  CMakeLists.txt  README.md
eratosthenes/: CMakeLists.txt
eratosthenes/base/: CMakeLists.txt  main.cxx
eratosthenes/serial/: CMakeLists.txt
nqueens/: CMakeLists.txt
nqueens/base/: CMakeLists.txt  main.cxx
nqueens/serial/: CMakeLists.txt  main.cxx  main_backtracking.cxx
